# flex-container-orchestrator

./: .env  .gitignore  .mch-ci.yml  .pre-commit-config.yaml  Dockerfile  HISTORY.rst  Jenkinsfile  README.md  README.rst  docker-compose.yml  pyproject.toml  sonar-project.properties
aviso/: listener_diss.yaml  run_docker_script.py
doc/: conf.py  index.rst  installation.rst  usage.rst
flex_container_orchestrator/: __init__.py  main.py
flex_container_orchestrator/config/: .env  base_settings.py  http_audit.py  logger.py  service_settings.py  settings.yaml
flex_container_orchestrator/config/aviso/: listener_diss.yaml
flex_container_orchestrator/domain/: aggregator_flexpart.py  greeting.py  lead_time_aggregator.py
flex_container_orchestrator/routers/: greeting_router.py
flex_container_orchestrator/services/: flexpart_service.py  greeting_service.py
k8s/base/: deployment.yaml  route.yaml  service.yaml
k8s/overlays/depl/: kustomization.yaml
k8s/overlays/devt/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
test/: run_flexpart_jobs.sh
test/domain/: test_aggregator_flexpart.py  test_lead_time_aggregator.py
test/integration/: conftest.py
test/integration/routers/: test_greeting_router.py
test/services/: test_flexpart_service.py
test/unit/services/: test_greeting_service.py
tests/domain/: test_aggregator_flexpart.py
